News for package rnirs

##----------------- Version 1.8-8




##----------------- Version 1.8-7

- New functions

  svmr          : SVM regression.
  
  svmc          : SVM discrimination.
  
  splitpar      : Facility for tuning models.



##----------------- Version 1.8-6

- Various code cleaning


##----------------- Version 1.8-5

- Bug correction in kpls (Xu = NULL did not work)

- Various code cleaning


##----------------- Version 1.8-4

- New argument "cri" in function lwplsr, lwplsda and lwplsdalm

- Various code cleaning


##----------------- Version 1.8-3

- New argument "namx" in function plotmse

- Modification of kernel regression & DA functions: Values set to the kernel parameters (e.g. sigma) can be vectors.

- New functions:

  dkplsr       Direct kernel PLSR
  dkplsda      Direct kernel PLSDA
  dkplsdalm    Direct kernel PLSDA

##----------------- Version 1.8-2

- Various code cleaning

- Ghange of the default value of argument "h" in function lwplsr, lwplsda, lwplsdalm 


##----------------- Version 1.8-1

- New functions

    darr    DA with linear ridge regression 
  
    dakrr   DA with non linear kerbel ridge regression 

- Function lmridge renamed to rr

- Change argument value in function inlr

- New argument "square" in function wdist

- Various internal modifications


##----------------- Version 1.8-0

- Function matpoly renamed to "inls"

- Function out.pca renamed to "out.sdod"

- Modifiaction of function out.eucl

- Argument "weights" added to fonction pca.rob

- New functions

  kpls.nipals         Kernel NIPALS PLS (Rosipal & Trejo 2001) 
  kplsr               Kernel PLSR (using kpls.nipals)
  kplsda, kplsdalm    Kernel PLSDA (using kpls.nipals)
  kgram               Kernel Gram matrices for direct kernel regressions
  pls.rob             Robust PLS algorithm (robust PCA and WPLS) 
  pls.iw              Robust PLS algorithm (iterative Re-Weighting)
  

##----------------- Version 1.7-6

- New functions

    pcdalm    PCDA