@@ -18,7 +18,7 @@ pca.rob <- function(X, ncomp, nsim = 1500, alpha = .70, step2 = TRUE,
   
   r <- out.stah(X, nsim = nsim)
   w1 <- .talworth(r, quantile(r, alpha))
-  
+
   r <- out.eucl(X)
   w2 <- .talworth(r, quantile(r, alpha))
   
