@@ -2,7 +2,13 @@ News for package rnirs
 
 ##----------------- Version 1.8-8
 
+- Re-organisation of some outputs in discrimination functions.
 
+- Argument 'ncomp' added to functions scordis and odis.
+
+- Argument 'alpha.f' (opacity) added to function plotxy.
+
+- Argument 'weights' added to function daglm.
 
 
 ##----------------- Version 1.8-7
@@ -11,9 +17,9 @@ News for package rnirs
 
   svmr          : SVM regression.
   
-  svmc          : SVM discrimination.
+  svmc          : SVM discrimination (classification).
   
-  splitpar      : Facility for tuning models.
+  splitpar      : Auxiliary function for tuning models.
 
 
 
